# PhysioFit

./: .gitignore  .travis.yml  README.md  config_example_file.json  config_file.json  example_blk.txt  nlsic.R  physio_fit.R  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg  tools_ssg.R  tox.ini
.github/workflows/: deploy_pypi.yml  deploy_test_pypi.yml  tests.yml
Example/: WT-moy.txt  example.R  example.txt  example_sd.txt
Example/WT-moy_res/: WT-moy_log.txt  WT-moy_res.txt
Example/example_blk_res/: example_blk_log.txt  example_blk_res.txt
Example/example_res/: example_log.txt  example_res.txt
data/: config_example_file.json  data_model_5.tsv
data/KEIO_test_data/KEIO_ROBOT6_1/KEIO_ROBOT6_1_res/: config_file.json  flux_results.tsv  log.txt  stat_results.tsv
data/KEIO_test_data/KEIO_ROBOT6_2/: KEIO_ROBOT6_2.tsv
data/KEIO_test_data/KEIO_ROBOT6_2/KEIO_ROBOT6_2_res/: config_file.json
docs/: FAQ.rst  cite.rst  conf.py  faq.rst  index.rst  installation.rst  librairy.rst  license.rst  method.rst  models.rst  notebook.ipynb  quickstart.rst  reference.rst  requirements.txt  usage.rst
example/: WT-moy - Copie.tsv  config_example_file.json  example.txt  example_blk.txt  example_sd.txt
example/KEIO_test_data/: KEIO_ROBOT6_7.tsv
example/KEIO_test_data/KEIO_ROBOT6_1/KEIO_ROBOT6_1_res/: config_file.json  flux_results.tsv  log.txt  stat_results.tsv
example/KEIO_test_data/KEIO_ROBOT6_1_res/: KEIO_ROBOT6_1_log.txt  KEIO_ROBOT6_1_res.txt
example/KEIO_test_data/KEIO_ROBOT6_2/KEIO_ROBOT6_2_res/: flux_results.tsv  stat_results.tsv
example/KEIO_test_data/KEIO_ROBOT6_7/KEIO_ROBOT6_7_res/: config_file.json  flux_results.tsv  stat_results.tsv
example/WT-moy_res/: WT-moy_log.txt  WT-moy_res.txt
example/example_res/: example_res.txt
helper_doc/: notebook.ipynb
physiofit/: __init__.py  __main__.py  example_yaml.yml  logger.py
physiofit/base/: fitter.py  io.py  stat_analyzer.py
physiofit/data/: data_example.tsv  test-data_single_exp.tsv
physiofit/gui/: gui.py
physiofit/models/: base_model.py  model_1.py  model_2.py  model_3.py  model_4.py  model_5.py  template.py
physiofit/tests/: conftest.py  test_base.py  test_fitter.py  test_model_1.py  test_model_2.py  test_model_3.py  test_model_4.py  test_model_5.py  test_models.py  test_monod_model.py
physiofit/ui/: cli.py  gui.py
validation/models/: Batch exponential steady-state.txt  summary.xlsx  ~$results.xlsx
validation/models/Monod_model/: data.tsv
validation/models/Monod_model/physiofit_results/: config_file.yml  flux_results.tsv  stat_results.tsv
validation/models/Steady-state_model/: data.txt
validation/models/Steady-state_model/original_results/: KEIO_ROBOT1_30_log.txt
validation/models/Steady-state_model/physiofit_results/: summary.csv
validation/models/Steady-state_model/physiofit_results/results/: config_file.yml  flux_results.tsv  stat_results.tsv
validation/models/Steady-state_model_deg/: data.txt
validation/models/Steady-state_model_deg/physiofit_results/: summary.csv
validation/models/Steady-state_model_deg/physiofit_results/results/: config_file.yml  flux_results.tsv  stat_results.tsv
validation/validation_results/Berges_2021/: results.xlsx
validation/validation_results/Berges_2021/Berges_2021/: WT BW.txt  WT1.txt  WT2.txt  WT3.txt  WT4.txt  WT_BW_6_1.txt  WT_BW_6_3.txt  WT_BW_6_4.txt  WT_MG_6_1.txt  WT_MG_6_2.txt  artI.txt  hemX.txt  modF.txt  nanE.txt  wbbJ.txt  yacC.txt  yadG.txt  yaeR.txt  yafJ.txt  yahJ.txt  yahO.txt  yaiA.txt  yaiL.txt  yajD.txt  yajG.txt  yajO.txt  ybaQ.txt  ybaY.txt  ybbA.txt  ybcJ.txt  ybdH.txt  ybeL.txt  ybfE.txt  ybgJ.txt  ybgK.txt  ybgS.txt  ybhC.txt  ybiB.txt  ybiC.txt  ybiH.txt  (+155 more)
validation/validation_results/Berges_2021/Berges_2021/WT BW_res/: KEIO_ROBOT5_48_log.txt  KEIO_ROBOT5_48_res.txt
validation/validation_results/Berges_2021/Berges_2021/WT1_res/: KEIO_ROBOT1_46_log.txt  KEIO_ROBOT1_46_res.txt
validation/validation_results/Berges_2021/Berges_2021/WT2_res/: KEIO_ROBOT2_46_log.txt  KEIO_ROBOT2_46_res.txt
validation/validation_results/Berges_2021/Berges_2021/WT3_res/: KEIO_ROBOT3_46_log.txt  KEIO_ROBOT3_46_res.txt
validation/validation_results/Berges_2021/Berges_2021/WT4_res/: KEIO_ROBOT4_40_log.txt  KEIO_ROBOT4_40_res.txt
validation/validation_results/Berges_2021/Berges_2021/WT_BW_6_2_res/: KEIO_ROBOT6_2_log.txt
validation/validation_results/Berges_2021/PhysioFit_v3.4.0/: dataset.txt
validation/validation_results/Peiro_2019/: results.xlsx
validation/validation_results/Peiro_2019/Peiro_2019/: WT-1.txt  WT-2.txt  WT-3.txt  dhaKLM-1.txt  dhaKLM-2.txt  dhaKLM-3.txt  fsaA-1.txt  fsaA-2.txt  fsaA-3.txt  fsaA-4.txt  fsaB-1.txt  fsaB-2.txt  fsaB-3.txt  gldA-1.txt  gldA-2.txt  gldA-3.txt  gldA-4.txt  gldA-5.txt  gldA-6.txt  glpK-1.txt  glpK-2.txt  glpK-3.txt  glpK-4.txt  glpK-5.txt  glpK-6.txt
validation/validation_results/Peiro_2019/PhysioFit_v3.4.0/: dataset_1.tsv  dataset_2.tsv
validation/validation_results/Zentou_2019/data_res/: summary.csv
versions publi/: pyproject.toml
xample/KEIO_test_data/KEIO_ROBOT6_2_res/: KEIO_ROBOT6_2_res.txt
xample/example_res/: example_log.txt
(+886 files in other folders)
