[tool.poetry]
name = "physiofit"
version = "3.0.0"
description = "Calculate extracellular fluxes from metabolite concentrations and biomass data"
authors = ["llegregam <legregam@insa-toulouse.fr>"]
license = "GNU General Public License (GPL)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.5.3"
numpy = "^1.24.2"
scipy = "^1.10.1"
streamlit = "^1.20.0"
matplotlib = "^3.7.1"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"
nbsphinx = "^0.9.1"
pandoc = "^2.3"
Sphinx = "^6.1.3"
sphinx-argparse = "^0.4.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
