[tool.poetry]
name = "physiofit"
version = "3.3.1"
description = "Calculate extracellular fluxes from metabolite concentrations and biomass data"
authors = ["llegregam <legregam@insa-toulouse.fr>"]
license = "GNU General Public License (GPL)"
readme = "README.md"

[tool.poetry.scripts]
physiofit = 'physiofit.__main__:main'

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.12"
pandas = "^2.0.1"
numpy = "^1.24.2"
scipy = "^1.10.1"
streamlit = "^1.20.0"
matplotlib = "^3.7.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"
nbsphinx = "^0.9.1"
pandoc = "^2.3"
Sphinx = "^6.1.3"
sphinx-argparse = "^0.4.0"
sphinx-rtd-theme = "^1.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
tox = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
