[metadata]
name = physiofit
version = 2.0beta3
author = Loïc Le Grégam
author_email = legregam@insa-toulouse.fr
description = Calculate extracellular fluxes from metabolite concentrations and biomass data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MetaSys-LISBP/PhysioFit
project_urls =
    Bug Tracker = https://github.com/MetaSys-LISBP/PhysioFit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    numpy
    scipy
    streamlit>=1.5.0
    matplotlib
    openpyxl

[options.entry_points]
console_scripts =
    physiofit = physiofit.__main__:main
