[metadata]
name = physiofit
version = attr: physiofit.__version__
author = Loïc Le Grégam
author_email = legregam@insa-toulouse.fr
description = Calculate extracellular fluxes from metabolite concentrations and biomass data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MetaSys-LISBP/PhysioFit
project_urls =
    Bug Tracker = https://github.com/MetaSys-LISBP/PhysioFit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas >= 1.3.5
    numpy >= 1.21.6
    scipy >= 1.7.3
    streamlit>=1.9.0
    matplotlib >= 3.5.2
    openpyxl >= 3.0.9

[options.entry_points]
console_scripts =
    physiofit = physiofit.__main__:main
